--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -17,6 +17,9 @@
           <p>
             U-Tools is an intuitive and powerful web app that provides a range of tools for editing, converting, and manipulating PDF documents. Whether you need to merge multiple PDF files, add or remove pages, compress files, or extract text using OCR technology, U-Tools has got you covered. With a user-friendly interface and a wide range of features, U-Tools is designed to make working with PDFs as easy and efficient as possible. Our mission is to help individuals and businesses streamline their workflows, save time, and get more done with their PDF documents. Try U-Tools today and see how it can simplify your PDF editing and conversion needs.
           </p>
+           <p>
+            some features are under Development, but it will start soon !!
+           </p>
         </div>
       </div>
       <div class="col-md-6 col-lg-8">
